# docs/swagger.yaml
@@ -9,6 +9,17 @@ definitions:
       success:
         type: boolean
     type: object
+  model.UserLoginRequestSwaggo:
+    properties:
+      email:
+        type: string
+      password:
+        minLength: 6
+        type: string
+    required:
+    - email
+    - password
+    type: object
   model.UserRegisterRequestSwaggo:
     properties:
       age:
@@ -36,6 +47,30 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Login a user
+      parameters:
+      - description: User Login
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.UserLoginRequestSwaggo'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/common.Response'
+            type: array
+      summary: User Login
+      tags:
+      - users
   /auth/register:
     post:
       consumes:
@@ -60,4 +95,40 @@ paths:
       summary: User Register
       tags:
       - users
+  /users/{userId}:
+    put:
+      consumes:
+      - application/json
+      description: Update a user
+      parameters:
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: string
+      - description: User Update
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.UserRegisterRequestSwaggo'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/common.Response'
+            type: array
+      security:
+      - Bearer: []
+      summary: User Update
+      tags:
+      - users
+securityDefinitions:
+  Bearer JWT Token:
+    in: header
+    name: Bearer
+    type: apiKey
 swagger: "2.0"
